# vijaynagar

./: .gitignore  .replit  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/epaper/: db.sqlite3  index.html  package.json  run.py  start.sh
artifacts/epaper-django/: db.sqlite3  manage.py
artifacts/epaper-django/epaper_project/: wsgi.py
artifacts/epaper-django/newspaper/: forms.py  urls.py  views.py
artifacts/epaper-django/newspaper/migrations/: 0001_initial.py
artifacts/epaper-django/templates/: base.html
artifacts/epaper-django/templates/newspaper/: admin_dashboard.html  edition_form.html  home.html
artifacts/epaper/.replit-artifact/: artifact.toml
artifacts/epaper/epaper_project/: asgi.py  settings.py  urls.py
artifacts/epaper/newspaper/: admin.py  forms.py  models.py  urls.py  views.py
artifacts/epaper/newspaper/migrations/: 0002_add_view_count.py
artifacts/epaper/templates/: base.html
artifacts/epaper/templates/newspaper/: admin_dashboard.html  admin_login.html  edition_confirm_delete.html  edition_detail.html  home.html  profile.html
artifacts/epaper/templates/registration/: logged_out.html  login.html  signup.html
